# BooruSurfer2

./: .gitignore  CMakeLists.txt  README.md  premake4.lua
data/: favicon.xcf
resources/: infinity.js  main.css
src/: Server.cpp  Server.hpp  main.cpp
src/api/: Api.cpp  Api.hpp  ApiHandler.cpp  ApiHandler.hpp  BehoimiApi.hpp  DanApi.cpp  DanApi.hpp  IdolApi.hpp  KonachanApi.cpp  KonachanApi.hpp  LocalApi.cpp  LocalApi.hpp  MyHtml++.hpp  SanApi.cpp  SanApi.hpp  ShimmieApi.cpp  ShimmieApi.hpp  YandereApi.hpp
src/db/: AddLocal.cpp  AddLocal.hpp  Booru.cpp  Booru.hpp  Database.cpp  Database.hpp  LocalDb.cpp  LocalDb.hpp  Statement.cpp  Statement.hpp
src/exceptions/: InvalidInput.hpp  ResourceMissing.hpp  utils.hpp
src/html/: HtmlDocument.cpp  HtmlDocument.hpp
src/objects/: Comment.cpp  Comment.hpp  Identity.hpp  Image.cpp  Image.hpp  Index.cpp  Index.hpp  Note.cpp  Note.hpp  Pool.cpp  Pool.hpp  Post.cpp  Post.hpp  Resource.hpp  ResourceHandler.hpp  Tag.cpp  Tag.hpp
src/pages/: APage.cpp  APage.hpp  FaviconPage.cpp  FaviconPage.hpp  FilePage.cpp  FilePage.hpp  HomePage.cpp  HomePage.hpp  IndexPage.cpp  IndexPage.hpp  IndexStubPage.cpp  IndexStubPage.hpp  NotFoundPage.cpp  NotFoundPage.hpp  OpenSearchPage.cpp  OpenSearchPage.hpp  PageHandler.cpp  PageHandler.hpp  PostPage.cpp  PostPage.hpp  ProxyPage.cpp  ProxyPage.hpp  RssPage.cpp  RssPage.hpp  SavePage.cpp  SavePage.hpp  Styler.cpp  Styler.hpp  TagSearchPage.cpp  TagSearchPage.hpp  UrlHandler.cpp  UrlHandler.hpp
src/parsing/: DataNode.hpp  DataNodeInterface.hpp  HtmlDocument.cpp  JsonDataNode.hpp  NullDataNode.hpp  OpenSearchDescription.cpp  OpenSearchDescription.hpp  Rss.cpp  Rss.hpp  StringView.hpp  StringViewUtils.hpp  XmlBase.hpp  html.hpp  rapidxml_print.hpp
src/server/: ArgsParsing.cpp  Server.hpp
src/system/: ThumbGetter.cpp  ThumbGetter.hpp  Thumbnailer-fallback.cpp  Thumbnailer-kde.cpp  Thumbnailer-windows.cpp  Thumbnailer.hpp  TimeHandling.cpp  TimeHandling.hpp
styles/: _grail.scss  _header.scss  _post-list.scss  _post.scss  main.scss
